v6.3.7
- Removed - default fonts - in WP 6.5, fonts can be installed by user.
- Removed - purple style variation - is a base theme after all.
- Updated - Installer for the secondary child theme with webpack setup (wecodeart-honey)
- Updated - .has-parallax class can now be used to translate the entire element on scroll (--wp--animation: __backgrounPosition|__translate3d)
- Updated - cleaner folder structure and class aliases for some of the deprecated classes/namespaces (Singleton/Installable/Loadable etc)
- Updated - Improved compression for encode_svg_data output
- Updated - wecodeart_asset function to return WeCodeArt\Support\Assets\Asset object instead of the file uri
- Updated - get_asset method of Config/Trait/Asset class to return file URL or PATH (based on 3rd new parameter)
- Updated - core/list icon style overflowing due to missing position: relative for list items
- Updated - core/columns align items specificity versus is-layout-flex class
- Updated - core/image placeholder object-fit force fill (for aspect ratio responsiveness)
- Updated - Styles/Components/Tooltip|Popover to WCA: Formatting module
- Updated - deprecated fonts API and conditional load only if WP version is less than 6.5
- Updated - box-shadow presets are now controlled via custom -> boxShadow in theme.json
- Updated - improved shorthand properties for block styles (margin and padding for the moment)
- Updated - Gutenberg styles module - implement by default instead of using Integration interface
- Updated - Gutenberg styles module - now allows easy registration of Styles processors (core will run by default)
- Updated - Gutenberg class utilities module - implement by default instead of using Integration interface
- Updated - Gutenberg patterns module - implement by default instead of using Integration interface
- Updated - Core support keys cannot be set/unset/changed
- Updated - core/social-links sharing variation is now registered in php