@@ -5,7 +5,5 @@ yarn.lock
 .idea/
 dploy.js
 
-inc/support/modules/accordion/
-inc/support/modules/formatting/
-inc/support/modules/scrolltop/
-inc/support/modules/lorem/
+inc/support/modules/*
+!inc/support/modules/class-modules.php
